# privbin

./: .env.example  .prettierrc  Cargo.toml  Dockerfile  LICENSE.md  README.md  build.rs  configuration.yml  jsconfig.json  package.json  tailwind.config.js
.sqlx/: query-f69f350ab61c885e0738d85fb953da06b1f14177604a0b2a072e9ffb0c0b6c10.json  query-f74650b1a9c849809c642846d98c13ce651bba92468e426263e24c968a2515df.json
components/: Footer.js  Header.js
libraries/: backend.js  database.js  memory.js  planetscale.js
migrations/: 20230704131158_create_subscriptions_table.sql  20230704153503_create_items_table.sql
pages/: _app.js  _document.js  index.js
pages/[id]/: index.js
pages/[id]/raw/: _middleware.js  index.js
pages/api/: public.js  set.js
pages/api/[id]/: index.js  raw.js
prisma/: schema.prisma
prisma/migrations/20220116142731_init/: migration.sql
prisma/migrations/20220620074228_init/: migration.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/routes/: health_check.rs  index.rs  subscriptions.rs
static/css/: app.css
templates/: index.html  layout.html
templates/macros/: link.html
