[package]
name = "privbin"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "privbin"

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
config = "0.13.3"
serde = { version = "1.0.166", features = ["derive"] }
tera = { version = "1.19.0", features = ["builtins"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.4.0", features = ["v4"] }

[dependencies.sqlx]
version = "0.7.0"
default-features = false
features = [
	"runtime-tokio-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate"
]

[dev-dependencies]
reqwest = "0.11.18"
